--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ By using this system, you agree to the Terms and Conditions outlined below.</p>
 </div>
 <nav>
 <ul>
+<li><a href="oneplus-x.github.io">Go Back</a></li>
 <li><a href="/access.html">Access the System</a></li>
 <li><a href="#TCS">Terms & Conditions</a></li>
 </ul>
