--- a/Misc.html
+++ b/Misc.html
@@ -2,51 +2,44 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Under Construction</title>
+<title>404 - Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-<style>
-body {
-  background-image: url("back4.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-}
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-81899858-1"></script>
+<script type="text/javascript">  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-#button {
-  background-color: #e7e7e7;
-  position: absolute;
-  border: none;
-  color: black;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  white-space: nowrap;
-  display: none;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 8px;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0
-    rgba(0, 0, 0, 0.19);
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  white-space: nowrap;
-}
-</style>
-<div id="queries"></div>
-<script src="http://www.google.com/cse/api/partner-pub-2313105504330449/cse/2364561234/queries/js?oe=UTF-8&amp;callback=(new+PopularQueryRenderer(document.getElementById(%22queries%22))).render"></script>
+  ga('create', 'UA-81899858-1', 'auto');
+  ga('send', 'pageview');
+		
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-81899858-1');
+</script>
+
+    <!-- Google Adsense -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+ <script type="text/javascript"> (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2313105504330449",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body>
+<div id="queries"></div>
+<script src="http://www.google.com/cse/api/partner-pub-2313105504330449/cse/2364561234/queries/js?oe=UTF-8&amp;callback=(new+PopularQueryRenderer(document.getElementById(%22queries%22))).render"></script>
 <div class="video-container">
     <div class="overlay fon_logo">
       <div class="logo">
-        <img src="fa fa-youtube" alt="">
+        <img src="" alt="">
       </div>
-        <a href="" class="button finlink"><img src="fa fa-watch" alt=""></a>
+        <a href="" class="button finlink"><img src="" alt=""></a>
     </div>
 </div>
   <button id="button">Catch me "_" if you can</button>
