--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="assets/css/main.css" />
 <noscript><meta http-equiv="refresh" content="0; url=OSINTToolkit.github.io" /></noscript>
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-81899858-1"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<script type="text/javascript">  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
@@ -21,6 +21,14 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-81899858-1');
+</script>
+
+    <!-- Google Adsense -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+ <script type="text/javascript"> (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2313105504330449",
+    enable_page_level_ads: true
+  });
 </script>
 </head>
 <body>
