--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <!-- Google Adsense -->
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
- <script type="text/javascript"> (adsbygoogle = window.adsbygoogle || []).push({
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
     google_ad_client: "ca-pub-2313105504330449",
     enable_page_level_ads: true
   });
